workshop4/fortuneapp-deploy-svc-gw-vs/fortune-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
   name: fortune-ingress-vs

spec:
   hosts:
   - "*"
   gateways:
   - fortune-ingress.default.svc.cluster.local
   http:
   - match:
     - uri:
        prefix: /v1
     route:
     - destination:
        host: fortuneapp-svc
        port: 
          number: 80
     rewrite:
        uri: /
   - match:
     - uri:
        prefix: /v2
     route:
     - destination:
        host: weather
        port: 
          number: 8080
     rewrite:
        uri: /
